spade-tests/src/snapshots/spade_tests__typeinference__port_type_in_generic_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic types can not be ports
  ┌─ testinput:7:5
  │
7 │     inst takes_generic(b)
  │     ^^^^^^^^^^^^^^^^^^^^^ Parameter T is struct X {x: &mut bool} which is a port type


